--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="google-touch-icon" href="google-touch-icon.png">
         <link rel="manifest" href="manifest.json">
+        <link rel="stylesheet" href="css/screen.css">
     </head>
     <body>
         <header>
