--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <link rel="google-touch-icon" href="google-touch-icon.png">
         <link rel="manifest" href="manifest.json">
         <link rel="stylesheet" href="css/screen.css">
+        <link rel="stylesheet" href="css/normalize.css">
+        
     </head>
     <body>
         <header>
