--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         <h3>
             To get you started
         </h3>
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, id.
+        </ul>
         <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. This is a <a href="https://www.google.com">visited link</a> hic nemo dicta dignissimos dolorum obcaecati nobis tenetur laudantium iusto quibusdam vero velit magnam quam quas! Iure nobis minima accusamus fuga.
         </p>
