--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="google-touch-icon" href="google-touch-icon.png">
         <link rel="manifest" href="manifest.json">
-        <link rel="stylesheet" href="css/screen.css">
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/screen.css">
         
     </head>
     <body>
@@ -62,7 +62,7 @@
         </p>
         <hr>
         <footer>
-            <p>By <strong>Your name</strong></p>
+            <p>By <strong>Shankar Maes</strong></p>
         </footer>
     </body>
 </html>
