--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@
             Styling lists is easy
         </h3>
         <p>
-        <ul id="list">
-            <li></li>
-            <li></li>
-            <li></li>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo, id.
+        <ul>
+            <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, consectetur.</li>
+            <li>Nihil, sint ipsa! Placeat, aliquid tempora! Earum explicabo similique quam?</li>
+            <li>Atque cupiditate nobis quae, accusamus soluta velit minus aliquam autem.</li>
         </ul>
         </p>
         <hr>
