--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             Styling lists is easy
         </h3>
         <p>
-        <ul>
+        <ul id="list">
             <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius, consectetur.</li>
             <li>Nihil, sint ipsa! Placeat, aliquid tempora! Earum explicabo similique quam?</li>
             <li>Atque cupiditate nobis quae, accusamus soluta velit minus aliquam autem.</li>
